services.yaml
---
# Headless service для формирования записи в DNS
apiVersion: v1
kind: Service
metadata:
  name: nexus
  namespace: ingress-nginx
  labels:
    app: nexus
    section: tools
spec:
  ports:
    - name: http-main
      port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    app: nexus
    section: tools
  type: ClusterIP
