Ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "1500m"
    kubernetes.io/ingress.class: "nginx"
  name: nexus
  namespace: ingress-nginx
  labels:
    app: nexus
    section: tools
spec:
#  ingressClassName: nginx
  rules:
    - host: nexus.securitystand.cloud
      http:
        paths:
          - backend:
              service:
                name: nexus
                port:
                  number: 8081
            path: /
            pathType: Prefix
